--- a/Scripts/.env
+++ b/Scripts/.env
@@ -9,8 +9,7 @@ WORDPRESS_DB_NAME=wordpress
 WORDPRESS_DB_USER=wp_user
 WORDPRESS_DB_HOST=172.31.86.236
 WORDPRESS_DB_PASSWORD=wppass
-IP_CLIENTE_MYSQL=172.31.90.82
-#172.31.%
+IP_CLIENTE_MYSQL= 172.31.%
 
 WORDPRESS_TITLE="Sitio wed de IAW"
 WORDPRESS_ADMIN=admin
