--- a/Scripts/.env
+++ b/Scripts/.env
@@ -17,7 +17,7 @@ WORDPRESS_PASS=admin
 WORDPRESS_email=demo@demo.com
 #---------------------------------
 CORREO=demo@demo.com
-dominio=practica01-05.ddns.net
+dominio=balancer.myddns.me
 
 
 MYSQL_PRIVATE=172.31.86.236
